# zed

./: Cargo.toml  GLOSSARY.md
.claude/: settings.local.json
.claude/commands/: create_plan.md  describe_pr.md
.config/: hakari.toml
crates/acp_thread/src/: acp_thread.rs  connection.rs
crates/agent_servers/src/: acp.rs
crates/agent_ui/src/acp/: message_editor.rs  thread_view.rs
crates/audio/src/: audio.rs  audio_settings.rs
crates/editor/src/: editor.rs  editor_tests.rs
crates/gpui/src/platform/linux/x11/: window.rs
crates/livekit_client/src/livekit_client/: playback.rs
crates/livekit_client/src/livekit_client/playback/: source.rs
crates/project/src/: lsp_store.rs
crates/proto/proto/: lsp.proto
crates/scheduler/: Cargo.toml
crates/scheduler/fuzz/: Cargo.toml
crates/scheduler/fuzz/fuzz_targets/: basic.rs  priorities.rs  sessions.rs  timers.rs
crates/scheduler/src/: executor.rs  lib.rs  scheduler.rs  task.rs
crates/scheduler/src/compat/: cloud.rs  gpui.rs  mod.rs
crates/scheduler/src/fuzzing/: harness.rs  mod.rs
crates/scheduler/src/platform/: generic.rs  macos.rs  mod.rs  test.rs
crates/scheduler/src/runtime/: fuzzing.rs  mod.rs  production.rs  simulation.rs
crates/scheduler/src/runtime/simulation/: sessions.rs
crates/scheduler/tests/: integration_tests.rs
thoughts/shared/plans/: unified-scheduler-implementation.md
thoughts/shared/research/: 2025-08-29_23-30-43_custom-acp-commands.md  2025-08-30_15-13-13_scheduler-crate-research.md  object-safe-scheduler-design.md
tooling/workspace-hack/: Cargo.toml
