[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
async-task = "4.0"

# Optional runtime backends
tokio = { version = "1.0", features = ["full"], optional = true }
async-std = { version = "1.0", optional = true }

# Optional fuzzing support
afl = { version = "0.15", optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
async-std-runtime = ["async-std"]
fuzzing = ["afl"]
testing = []